[gd_scene load_steps=12 format=3 uid="uid://byfoewl1ap1wn"]

[ext_resource type="Script" path="res://scenes/menu_scenes/profile_window.gd" id="1_c3811"]
[ext_resource type="Texture2D" uid="uid://brd61l88rxfvm" path="res://textures/menu_theme_background.png" id="2_1cp2h"]
[ext_resource type="Texture2D" uid="uid://d1nfy7tvrfvp1" path="res://assets/menus/menu_plank_add.png" id="2_2o34k"]
[ext_resource type="Texture2D" uid="uid://c3e7jevfuf21l" path="res://assets/menus/menu_plank_remove.png" id="3_1i6cb"]
[ext_resource type="Texture2D" uid="uid://dsmxihhbpp2j2" path="res://assets/menus/menu_plank_add_bloody.png" id="4_cn5n2"]
[ext_resource type="Texture2D" uid="uid://c4nhvc1vj81aw" path="res://assets/menus/menu_plank_enter.png" id="4_ysrrp"]
[ext_resource type="Texture2D" uid="uid://dn85rkghsjd4t" path="res://assets/menus/menu_plank_3.png" id="5_x6xtb"]
[ext_resource type="Texture2D" uid="uid://dv2b5g6qb0rad" path="res://assets/menus/menu_plank_remove_bloody.png" id="6_mwcvk"]
[ext_resource type="AudioStream" uid="uid://fkvn2yts26js" path="res://assets/menus/blood_splatter2.ogg" id="6_tyjtq"]
[ext_resource type="Texture2D" uid="uid://2tx3wckut1dp" path="res://assets/menus/menu_plank_enter_bloody.png" id="8_7cfqe"]
[ext_resource type="Texture2D" uid="uid://ch23iev2ua3ov" path="res://assets/menus/menu_plank_bloody_3.png" id="10_vvw48"]

[node name="profile_window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3811")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1cp2h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -135.5
offset_right = 257.5
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2

[node name="Profile1" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice 1"

[node name="Profile2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice 2"

[node name="Profile3" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice3"

[node name="Profile4" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice4"

[node name="Profile5" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice5"

[node name="Profile6" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "choice6"

[node name="NicknameField" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "username"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddUserButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_2o34k")
texture_pressed = ExtResource("4_cn5n2")

[node name="RemoveUserButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_1i6cb")
texture_pressed = ExtResource("6_mwcvk")

[node name="EnterButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_ysrrp")
texture_pressed = ExtResource("8_7cfqe")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_x6xtb")
texture_pressed = ExtResource("10_vvw48")

[node name="ButtonClickSplatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tyjtq")
pitch_scale = 2.0
bus = &"UI"

[connection signal="pressed" from="VBoxContainer/Profile1" to="." method="_on_profile_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Profile2" to="." method="_on_profile_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Profile3" to="." method="_on_profile_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Profile4" to="." method="_on_profile_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Profile5" to="." method="_on_profile_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Profile6" to="." method="_on_profile_6_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/AddUserButton" to="." method="_on_adduser_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/AddUserButton" to="." method="_on_adduser_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/AddUserButton" to="." method="_on_adduser_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/AddUserButton" to="." method="_on_adduser_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddUserButton" to="." method="_on_adduser_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/RemoveUserButton" to="." method="_on_removeuser_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/RemoveUserButton" to="." method="_on_removeuser_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/RemoveUserButton" to="." method="_on_removeuser_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/RemoveUserButton" to="." method="_on_removeuser_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveUserButton" to="." method="_on_removeuser_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
